--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
     rootDir: backend
-    buildCommand: npm install && npm run build
+    buildCommand: npm ci && npm run build
     startCommand: node dist/index.js
     envVars:
       - key: NODE_ENV
